trunk/Archive2/aa/ec9b1d5533b324/output
main.c: In function 'main':
main.c:3:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
